# LearnOpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ContextFree.h  camera.h  mesh.h  model.h  shader.h  texture.h
resources/shaders/: frag.glsl  frag2.glsl  model.frag  model.vert  vertex.glsl
src/: ContextFree.cpp  camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/libaries/: stb_image.cpp
src/shaders/: frag.glsl  vertex.glsl
